# dawn-rs

./: .gitignore  AGENT.md  Cargo.toml  DAWN_VERSION  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  update-dawn.yml
codegen/: Cargo.toml  README.md
codegen/src/: emitter.rs  generator.rs  lib.rs  parser.rs  visitor.rs  wire.rs
codegen/src/emitter/: callbacks.rs  constants.rs  enums.rs  extensions.rs  functions.rs  mod.rs  mod_rs.rs  objects.rs  render.rs  structs.rs
codegen/src/emitter/core/: callbacks.rs  ffi.rs  functions.rs  helpers.rs  index.rs  mod.rs  names.rs  numbers.rs  objects.rs  structs.rs
codegen/src/generator/: dawn_api.rs  dawn_c_api.rs  parser.rs
codegen/tests/: basic_parsing.rs  codegen.rs  comprehensive.rs  extensible_and_length.rs  filtering_and_getters.rs
dawn-wgpu/: Cargo.toml
dawn-wgpu/examples/: nya_cat_wire.rs  rainbow_cat_ipc.rs  triangle.rs
dawn-wgpu/src/: backend.rs  compat.rs  dispatch.rs  error.rs  future.rs  lib.rs  mapping.rs  types.rs  wire_backend.rs  wire_server.rs
dawn-wgpu/tests/: swiftshader.rs
example/: Cargo.toml
example/src/: lib.rs  main.rs
examples/: adapter_info.rs  import_dxgi_shared_handle.rs  triangle.rs  triangle_ipc.rs  triangle_wire.rs  wire_transport.rs
examples/dawn-capi/: Cargo.toml
examples/dawn-capi/src/: main.rs
scripts/: build_dawn_ci.py  dawn_release_utils.py  download_dawn_prebuilt.py  download_dawn_source.py  update_dawn_release.py
src/: api_model.rs  emitter.rs  ffi.rs  lib.rs  main.rs  wire.rs  wire_backend.rs  wire_cpp_shim.cc  wire_ipc.rs  wire_shim.rs
src/ffi/: linux_x86_64.rs  macos_aarch64.rs  macos_x86_64.rs  mod.rs  windows_x86_64.rs
