[package]
name = "dawn-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["codegen"]

[dependencies]
bitflags = "2"

[build-dependencies]
dawn-codegen = { path = "codegen" }

[dev-dependencies]
winit = "0.30"

[target.'cfg(target_os = "macos")'.dev-dependencies]
objc2 = "0.5"

[target.'cfg(target_os = "windows")'.dev-dependencies]
windows = { version = "0.62", features = ["Win32_Graphics_Dxgi","Win32_Graphics_Direct3D", "Win32_Foundation", "Win32","Win32_Graphics_Dxgi_Common"]}

[features]
default = ["dawn", "native"]
dawn = []
native = []
emscripten = []
compat = []

[[example]]
name = "adapter-info"
path = "examples/adapter_info.rs"

[[example]]
name = "triangle"
path = "examples/triangle.rs"
