[package]
name = "dawn-codegen"
version.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
heck = "0.5"
prettyplease = "0.2"
syn = { version = "2", default-features = false, features = ["full", "parsing"] }
