[package]
name = "dawn-codegen"
version.workspace = true
edition.workspace = true
description = "Code generator for Dawn WebGPU API"
documentation = "https://docs.rs/dawn-codegen"
license.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
heck = "0.4"
prettyplease = "0.2"
syn = { version = "2", default-features = false, features = ["full", "parsing"] }
bindgen = "0.72"
