[package]
name = "dawn-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wgpu compatibility layer for Dawn API"
repository.workspace = true
homepage.workspace = true

[dependencies]
dawn-rs = { workspace = true }
wgpu = { version = "28.0", features = ["custom"] }
wgt = { package = "wgpu-types", version = "28.0" }
interprocess = { version = "2.4.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-quartz-core = { version = "0.2", features = ["CALayer", "CAMetalLayer"] }
raw-window-metal = "1"

[dev-dependencies]
winit = { version = "0.30", features = ["rwh_06"] }
pollster = "0.3"

[features]
default = []
wire = ["dawn-rs/wire", "dep:interprocess"]

[[example]]
name = "rainbow_cat_ipc"
path = "examples/rainbow_cat_ipc.rs"
required-features = ["wire"]
