[package]
name = "dawn-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wgpu compatibility layer for Dawn API"
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
dawn-rs.workspace = true
wgpu = { version = "28.0", default-features = false, features = ["custom", "wgsl", "dx12", "metal", "vulkan", "webgpu", "gles"] }
wgt = { package = "wgpu-types", version = "28.0" }
interprocess = { version = "2.4.0", optional = true }
thiserror = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-quartz-core = { version = "0.3", features = ["CALayer", "CAMetalLayer"] }
objc2-core-foundation = { version = "0.3", features = ["CFDictionary", "CFNumber", "CFString"] }
objc2-io-surface = "0.3"
mach2 = "0.6"
raw-window-metal = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Wdk_System_SystemServices", "Win32_Foundation", "Win32_System_SystemInformation"] }

[dev-dependencies]
winit = { version = "0.30", features = ["rwh_06"] }
pollster = "0.3"
shared_memory = "0.12"
libc = "0.2"

[features]
default = ["dawn", "native"]
dawn = ["dawn-rs/dawn"]
native = ["dawn-rs/native"]
dawn-dynamic = ["dawn-rs/dawn-dynamic"]
wire = ["dawn-rs/wire", "dep:interprocess"]
shared_texture_memory = []

[[example]]
name = "nya-cat-wire"
path = "examples/nya_cat_wire.rs"
required-features = ["wire"]
